update deps and java version